--- a/Pages/Products/Delete.cshtml
+++ b/Pages/Products/Delete.cshtml
@@ -1,5 +1,5 @@
-﻿@page
-@model SupermarketWEB.Pages.Products.DeleteModel
+﻿page
+@model SupermarketWEB.Pages.Categories.DeleteModel
 @{
     ViewData["Title"] = "Delete";
 }
@@ -8,30 +8,24 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Name)
+        <dt class="clo-sm-2">
+            @Html.DisplayNameFor(model => model.Category.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Price)
+            @Html.DisplayFor(model => model.Category.Name)
+        </dd>}
+        <dt class="clo-sm-2">
+            @Html.DisplayNameFor(model => model.Category.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Price)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Product.Stock) <!-- Corregido de Stork a Stock -->
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Product.Stock) <!-- Corregido de Stork a Stock -->
-        </dd>
+            @Html.DisplayFor(model => model.Category.Description)
+        </dd>}
     </dl>
     <form method="post">
-        <input type="hidden" asp-for="Product.Id" />
+        <input type="hidden" asp-for="Category.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-page="./Index" class="btn btn-primary">Back to List</a>
     </form>
