--- a/Pages/Products/Edit.cshtml
+++ b/Pages/Products/Edit.cshtml
@@ -1,43 +1,38 @@
 ﻿@page
-@model SupermarketWEB.Pages.Products.EditModel
+@model SupermarketWEB.Pages.Categories.EditModel
 @{
     ViewData["Title"] = "Edit";
 }
 
 <h1>Edit</h1>
 
-<h4>Product</h4>
+<h4>Category</h4>
 <hr />
 <dl class="row">
     <dt class="clo-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Product.Id" />
+            <input type="hidden" asp-for="Category.Id" />
             <div class="form-group">
-                <label asp-for="Product.Name" class="control-label"></label>
-                <input asp-for="Product.Name" class="form-control" />
-                <span asp-validation-for="Product.Name" class="text-danger"></span>
+                <label asp-for="Category.Name" class="control-label"></label>
+                <input asp-for="Category.Name" class="form-control" />
+                <span asp-validation-for="Category.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Product.Price" class="control-label"></label>
-                <input asp-for="Product.Price" class="form-control" />
-                <span asp-validation-for="Product.Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Product.Stock" class="control-label"></label> <!-- Corregido de Stork a Stock -->
-                <input asp-for="Product.Stock" class="form-control" /> <!-- Corregido de Stork a Stock -->
-                <span asp-validation-for="Product.Stock" class="text-danger"></span> <!-- Corregido de Stork a Stock -->
+                <label asp-for="Category.Description" class="control-label"></label>
+                <input asp-for="Category.Description" class="form-control" />
+                <span asp-validation-for="Category.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-success" />
                 <a asp-page="./Index" class="btn btn-primary">Back to List</a>
             </div>
         </form>
-    </dt>
-</dl>
+        </div>
+        </div>
 
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
+        @section Scripts {
+            @{
+            await Html.RenderPartialAsync("_validationScriptsPartial");
+            }
+        }
